2009-10-22 Zoran Vasiljevic <zv@archiware.com>

	* generic/threadPool.c: fixed race condition when
	creating minworkers worker thread upfront.
	Failure to create one results in partial pool teardown.
	Fix for Bug # 2005794.

2008-05-22 Zoran Vasiljevic <zv@archiware.com>

	* generic/threadSpCmd.h: Added one cond variable per
	sync bucket to wait for item deletion.

	* generic/threadSpCmd.c: Threads that want to delete
	any sync primitive now wait properly until the last
	thread that references the primitive detaches.

	Fixed (broken) reference counting of items.

	Fixed wrong release of an condition variable that is
	about to be time-waited.

2008-05-18 Zoran Vasiljevic <zv@archiware.com>

	* generic/threadPoolCmd.c: Corrected potential race condition
	in TpoolWorker().

2007-06-30 Zoran Vasiljevic <zv@archiware.com>

	* generic/threadPoolCmd.c: Fixed signedness compiler warning
	on jobId in TpoolWaitObjCmd().

2007-06-30 Zoran Vasiljevic <zv@archiware.com>

	* generic/threadSvKeylistCmd.c: Fixed off-by-1 error in argument
	parsing for SvKeylkeysObjCmd(). See Tcl Bug #1575342.

	* generic/threadPoolCmd.c: Fixed Tcl Bug #1512225 (tpool::wait and
	tpool::cancel setting wrong values to passed variables)

2007-05-26 Zoran Vasiljevic <zv@archiware.com>

	* generic/threadPoolCmd.c: Fixed [tpool::post -nowait] to start
	  one new worker thread only if there are none started. 

2007-05-03  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/vc/rules.vc:     Updated the nmake build system to match
	* win/vc/nmakehlp.c:   current 8.5. (support for non-intel build
	* win/vc/makefile.vc:  and recent versions of msvc compiler)
	* win/thread.rc:       Fixed line endings.

2006-12-26 Zoran Vasiljevic <zv@archiware.com>

	* generic/threadCmd.c: Fixed race condition for
	creating preserved threads.

	* generic/threadSv.c: Removed memory leak.

2006-10-07 Zoran Vasiljevic <zv@archiware.com>

	*** 2.6.5 TAGGED FOR RELEASE (thread-2-6-5) ***

	Main changes since the last release: